adding changes to swagger.js
